pylint (0.11.0-2) unstable; urgency=low

  * Updated standards to 3.7.2
  * use debhelper 5

 -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:13:07 +0200

pylint (0.11.0-1) unstable; urgency=low

  * new upstream release, depending on python-astng 0.16
  * Applied Sebastian Rittau's patch to avoid NameError on InferenceError
    exception (closes: #358194)

 -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Wed, 19 Apr 2006 18:10:47 +0200

pylint (0.10.0-1) unstable; urgency=low

  * new upstream release, depending on python-astng 0.15

 -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon,  6 Mar 2006 09:43:19 +0100

pylint (0.9.0-3) unstable; urgency=low

  * Added missing provides/replaces/conflicts on pylint-test (closes: #352316)

 -- Alexandre Fayolle <afayolle@debian.org>  Mon, 13 Feb 2006 10:07:26 +0100

pylint (0.9.0-2) unstable; urgency=low

  * Build a single package which installs modules in /usr/lib/site-python
    (closes: #351130)
  * Remove duplication from man page (closes: #349689)
  * Fixed typo in control file
  * upload new release to Debian

 -- Alexandre Fayolle <afayolle@debian.org>  Fri, 10 Feb 2006 16:03:37 +0100

pylint (0.9.0-1) unstable; urgency=low

  * fix false positive with staticmethod used on a metaclass (closes: #341121)
  * reorganization to install into site-python, removing the need for 
    pythonX.X- packages and for the pylint-common and pylint-test packages
	
 -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Tue, 10 Jan 2006 14:19:57 +0100

pylint (0.8.1-1) unstable; urgency=low

  * added missing dependancy to logilab-astng
  * added missing .docs and .examples files
  * update control'standards-version to 3.6.2
  * fixed FSF address in the copyright file
  * new upstream release

 -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Mon,  7 Nov 2005 15:40:52 +0100

pylint (0.8.0-1) unstable; urgency=low

  * new upstream release
