@@ -3,13 +3,14 @@ Section: python
 Priority: optional
 Maintainer: Sylvain Thénault <sylvain.thenault@logilab.fr>
 Uploaders: Alexandre Fayolle <afayolle@debian.org> 
-Build-Depends: debhelper (>= 5.0.0), python-dev
+Build-Depends: debhelper (>= 5.0.37.1), python (>=2.3.5-7), python-dev (>=2.3.5-7), python-central
 Standards-Version: 3.7.2
+XS-Python-Version: current
 
 Package: pylint
 Architecture: all
-Depends: python, python-logilab-common (>= 0.13.0), python-logilab-astng (>= 0.16.0), python-tk, emacsen-common
-Provides: python2.2-pylint, python2.3-pylint, python2.4-pylint, pylint-common, pylint-test
+Depends: ${python:Depends}, python-logilab-common (>= 0.13.0), python-logilab-astng (>= 0.16.0), python-tk, emacsen-common
+XB-Python-Version: ${python:Versions}
 Conflicts: python2.2-pylint, python2.3-pylint, python2.4-pylint, pylint-common, pylint-test
 Replaces: python2.2-pylint, python2.3-pylint, python2.4-pylint, pylint-common, pylint-test
 Description: python code static checker
