@@ -1,7 +1,1 @@
-usr/lib/site-python
-usr/lib/site-python/pylint
-usr/share/doc/pylint
-usr/share/emacs/site-lisp/
-usr/share/emacs/site-lisp/pylint
-usr/share/doc/pylint
 usr/share/doc/pylint/test
