@@ -1,14 +1,6 @@
 #! /bin/sh -e
 #
 
-# remove .pyc and .pyo files
-dpkg --listfiles pylint |
-	awk '$0~/\.py$/ {print $0"c\n" $0"o"}' |
-	xargs rm -f >&2
-
-
-
-
 #DEBHELPER#
 
 exit 0
