@@ -2,8 +2,9 @@ pylint (0.11.0-2) unstable; urgency=low
 
   * Updated standards to 3.7.2
   * use debhelper 5
+  * new python policy
 
- -- Alexandre Fayolle <afayolle@debian.org>  Mon, 22 May 2006 12:13:07 +0200
+ -- Alexandre Fayolle <afayolle@debian.org>  Thu, 15 Jun 2006 10:38:32 +0200
 
 pylint (0.11.0-1) unstable; urgency=low
 
